--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -169,7 +169,7 @@ status open
 \begin_layout Plain Layout
 
 \lang french
-improve styles Quranic Ayates
+improve styles Quranic Ayates, to Images? or to another font
 \end_layout
 
 \end_inset
