--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -334,8 +334,15 @@ Voyels
 etc.
 \end_layout
 
+\begin_layout Enumerate
+
+\series bold
+\lang english
+Word sens disambiguation:
+\end_layout
+
 \begin_layout Subsection
-Possible Combinations
+Possible Combinaisons
 \end_layout
 
 \begin_layout Section
