--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -14487,7 +14487,7 @@ key "Hadj08"
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -14521,6 +14521,43 @@ key "Hadj08"
 \end_inset
 
 
+\end_layout
+
+\begin_layout Section
+Qur'anic Search Engines
+\end_layout
+
+\begin_layout Standard
+[Introduction]
+\end_layout
+
+\begin_layout Standard
+eachone-> Description, name, type, licents meaning of name, year of creation,
+ creator , Features , Cons , Developing status.
+\end_layout
+
+\begin_layout Standard
+Alawfa
+\end_layout
+
+\begin_layout Standard
+المنقب القرآني
+\end_layout
+
+\begin_layout Standard
+Quranic Researcher
+\end_layout
+
+\begin_layout Standard
+qurancomplex search
+\end_layout
+
+\begin_layout Standard
+quranologie
+\end_layout
+
+\begin_layout Standard
+Tanzil
 \end_layout
 
 \begin_layout Section
