--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -131,6 +131,14 @@
   type = {Thèse},
 }
 
+@MASTERSTHESIS{ ASSEM_MEROUANE,
+  author = {Assem Chelli and Merouane Dahmani and Amar Balla and Taha Zerrouki},
+  title = {Développement d'un moteur de recherche et d'indexation pour les documents coraniques},
+  school = {Ecole Nationale Superieure des l'Informatique (ESI) - Algiers},
+  year = {2010},
+  type = {Engineer Thesis},
+}
+
 @MASTERSTHESIS{ 
   Kadri_et_benyamina1992,
   author = {Y Kadri and A Benyamina},
