--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -14,7 +14,7 @@ fixltx2e
 initials
 \end_modules
 \maintain_unincluded_children false
-\language french
+\language english
 \language_package default
 \inputencoding auto
 \fontencoding global
@@ -183,7 +183,7 @@ After listing all possible search features as explained in the previous
  At first, we'll explain the general behaviour, our modifications and improvment
 s on it.
  Then we'll explain main parts of the retrival system one by one: Text processin
-g , Query processing, Results processing, Suggestion system.
+g, Query processing, Results processing, Suggestion system.
  After this, we'll discuss how to implement a full vocalized search and
  the roadmap toward symantic search.
  Finally, we'll mention necessary quranic resources and the features depending
@@ -195,7 +195,336 @@ Previous Work
 \end_layout
 
 \begin_layout Standard
-[TODO]
+We've start the work on this idea of Search work as Engineer degree graduation
+ project entiteled "Development of a search and indexing engine for qur'anic
+ documents"
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Original title in French: Développement d'un moteur de recherche et d'indexation
+ pour les documents coraniques
+\end_layout
+
+\end_inset
+
+
+\begin_inset CommandInset citation
+LatexCommand cite
+key "ASSEM_MEROUANE"
+
+\end_inset
+
+.
+ We'll browse what already done so we consider it as the base to continue.
+\end_layout
+
+\begin_layout Standard
+To attend our objective, we had based on the general behavior of retrieval
+ systems as described on the figure:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename figures/Basic Model.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Basic Prototype
+\end_layout
+
+\end_inset
+
+
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+to Translate the figure
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+We did ignore the phase of crawling because our need was about search in
+ a limited static resource which is the Quran text on the contrary of other
+ search engines needs.
+\end_layout
+
+\begin_layout Standard
+We have considered the Ayah as the key unit of the index, each Ayah is defined
+ by its Surah name and its number in the Surah.
+ We had adopted a Qur'anic text written on standard script for the basic
+ search.
+ 
+\end_layout
+
+\begin_layout Standard
+The basic schema that we've used in document index contains: Document ID,
+ Ayah ID, Ayah text, Surah name.
+\end_layout
+
+\begin_layout Standard
+The Searcher (in the previous figure) is the element served to perform the
+ search operation.
+ It gets user queries , retrieving them in the inverted index of Ayahs to
+ get document IDs of matched Ayahs and then use those document IDs to retrieve
+ all information of matched Ayahs such as Ayah text and its Surah name.
+ The whole information will be sent to the interfaces as results.
+ The behavior of Searcher is described in this figure:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Standard
+\align center
+\begin_inset Graphics
+	filename figures/Searcher Behavior.png
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+The behavior of Searcher
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+To translate the figure!
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+We had proposed a partial vocalization comparison between indexed and queried
+ keywords.
+ The new comparison compare the diacritics if exists in the two compared
+ words but it pass the comparison if diacritics does not exist at least
+ in one of the compared words.
+\end_layout
+
+\begin_layout Standard
+We had enriched our prototype in many key steps , we cite them here 
+\begin_inset Note Greyedout
+status open
+
+\begin_layout Plain Layout
+ملخصة
+\end_layout
+
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Subsection
+Text Processing
+\end_layout
+
+\begin_layout Standard
+Text Processing is generally based on two main phases.
+ The first is the tokenization (extract tokens).
+ The second is the processing of those tokens, it includes normalization
+ of characters, filtering the stop words, and the last: the stemming.
+ We've base on the same phases but we had customized them.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename figures/Text Processing.png
+	scale 50
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Text processing
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Note Greyedout
+status open
+
+\begin_layout Plain Layout
+to translate: figure
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+For tokenization, we've applied the space tokenization to separate text
+ on each space or tab encountered.
+ We cited also that we can separate the pronouns from nouns but that need
+ a further study for different cases.
+ One of the special cases is 
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+‬‬
+\backslash
+arbox{لهن}
+\end_layout
+
+\end_inset
+
+(for them, feminine) where the pronoun forms the base of the word.
+\end_layout
+
+\begin_layout Standard
+For normalization, we include it it the fixing of shaping problem of letters
+ and of lam-alef.
+ we avoid to remove the diacritics in this phase because we needed the diacritic
+s in further features.
+ The same for the case of hamza forms.
+\end_layout
+
+\begin_layout Standard
+For stemming, 
+\end_layout
+
+\begin_layout Standard
+For filtring Stop words,
+\end_layout
+
+\begin_layout Subsection
+Query Processing
+\end_layout
+
+\begin_layout Subsection
+Suggestions
+\end_layout
+
+\begin_layout Subsection
+Results Processing
+\end_layout
+
+\begin_layout Subsection
+Indexes Importing
+\end_layout
+
+\begin_layout Subsection
+Crawling
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+.
+\end_layout
+
+\begin_layout Standard
+................
+\end_layout
+
+\begin_layout Standard
+====
 \end_layout
 
 \begin_layout Standard
@@ -226,8 +555,16 @@ General Phases:
 Tokenization
 \end_layout
 
+\begin_layout Standard
++segmentation of pronouns
+\end_layout
+
 \begin_layout Subsubsection
 Normalisation
+\end_layout
+
+\begin_layout Standard
++segmentation of kasheeda
 \end_layout
 
 \begin_layout Subsubsection
@@ -337,7 +674,6 @@ etc.
 \begin_layout Enumerate
 
 \series bold
-\lang english
 Word sens disambiguation:
 \end_layout
 
@@ -486,7 +822,7 @@ Toward Semantic Search
 
 \begin_layout Standard
 \begin_inset Note Comment
-status open
+status collapsed
 
 \begin_layout Plain Layout
 Semantic search seeks to improve search accuracy by understanding searcher
