--- a/thesis/main.lyx
+++ b/thesis/main.lyx
@@ -560,6 +560,15 @@ thechapter}}}
 \end_layout
 
 \begin_layout Part
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
+makeindex 'main.glo' -s 'main.ist' -t 'main.glg' -o 'main.gls' 
+\end_layout
+
+\end_inset
+
 State Art
 \end_layout
 
